--- a/package.json
+++ b/package.json
@@ -20,8 +20,7 @@
   "dependencies": {},
   "types": "./dist/index.d.ts",
   "peerDependencies": {
-    "react": ">= 18.0.0",
-    "react-dom": ">= 18.0.0"
+    "react": ">= 18.0.0"
   },
   "devDependencies": {
     "@babel/cli": "^7.17.6",
@@ -47,9 +46,9 @@
     "jest": "^28.0.0",
     "jest-environment-jsdom": "^28.0.2",
     "jest-websocket-mock": "^2.3.0",
+    "react-native": "^0.71.3",
     "mock-socket": "^9.1.3",
     "react": "18.1.0",
-    "react-dom": "18.1.0",
     "react-test-renderer": "18.1.0",
     "source-map-loader": "^3.0.1",
     "ts-jest": "28.0.0-next.1",
