--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "react-use-websocket",
   "version": "4.3.1",
   "description": "React Hook for WebSocket communication",
-  "main": "./dist/index.js",
+  "main": "./src/index.ts",
   "files": [
-    "src",
-    "dist"
+    "src"
   ],
   "scripts": {
     "test": "cross-env node_modules/.bin/jest --verbose --no-cache",
