--- a/package.json
+++ b/package.json
@@ -17,7 +17,7 @@
     "url": "git+https://github.com/robtaussig/react-use-websocket.git"
   },
   "dependencies": {},
-  "types": "./dist/index.d.ts",
+  "types": "./src/index.ts",
   "peerDependencies": {
     "react": ">= 18.0.0"
   },
